plugins {
    id 'java'
}

group 'net.Phoenix'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
    implementation("net.dv8tion:JDA:5.0.0-beta.3")
    implementation 'org.apache.commons:commons-lang3:3.12.0'
    implementation 'com.google.guava:guava:31.1-jre'
    implementation 'com.google.code.gson:gson:2.10'
    implementation 'ch.qos.logback:logback-classic:1.2.9'
    implementation group: 'org.postgresql', name: 'postgresql', version: '42.5.1'
}

test {
    useJUnitPlatform()
}
sourceCompatibility = JavaVersion.VERSION_18
targetCompatibility = JavaVersion.VERSION_18
